<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.completecoffee.MainActivity">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/hint_name"
            android:inputType="textCapSentences" />

        <TextView
            style="@style/Headings"
            android:text="@string/toppings" />

        <CheckBox
            android:id="@+id/wc"
            style="@style/layout"
            android:onClick="wcClicked"
            android:text="@string/wc" />

        <CheckBox
            android:id="@+id/c"
            style="@style/layout"
            android:layout_marginBottom="16dp"
            android:text="@string/choc"
            android:visibility="gone" />

        <TextView
            style="@style/Headings"
            android:text="@string/qty" />

        <LinearLayout
            style="@style/layout"
            android:orientation="horizontal">

            <Button
                android:id="@+id/text_plus"
                style="@style/layout"
                android:clickable="true"
                android:onClick="increment"
                android:paddingRight="8dp"
                android:text="@string/plus"
                android:textSize="16sp"
                android:typeface="sans"/>

            <TextView
                android:id="@+id/quantity_text_view"
                style="@style/layout"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/zero"
                android:textSize="16sp" />

            <Button
                style="@style/layout"
                android:id="@+id/text_minus"
                android:clickable="true"
                android:onClick="decrement"
                android:paddingLeft="8dp"
                android:text="@string/minus"
                android:textSize="16sp"
                android:typeface="sans"/>

        </LinearLayout>

        <Button
            android:id="@+id/button_order"
            style="@style/layout"
            android:text="Order"
            android:textAllCaps="true"
            android:typeface="sans"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"/>
    </LinearLayout>
</ScrollView>